Refactor validation error handling to use List<String> for error messages and update related classes